...
                    <Text testID="name" accessible={true} accessibilityLabel={name} style={styles.textField}>
                        {name}
                    </Text>
                </View>

                <View style={styles.rowLabel}>
                    <Text testID="labelAge" accessible={true} accessibilityLabel="Alter" style={styles.textLabel}>
                        Alter
                    </Text>
                </View>
                <View style={styles.row}>
                    <Text
                        testID="age"
...
