appId: com.anonymous.ineedhelp
name: Fill valid personal data
---
- launchApp:
      clearState: true
- extendedWaitUntil:
      visible: 'AKZEPTIEREN'
      timeout: 20000
- tapOn: 'AKZEPTIEREN'
- tapOn: 'Name'
- inputText: 'Max Mustermann'
- tapOn: 'Alter'
- inputText: '30'
- tapOn: 'Gewicht in Kg'
- inputText: '65.5'
- scroll
- tapOn: 'Größe in cm'
- inputText: '175'
- tapOn: 'Bitte Blutgruppe wählen...'
- scrollUntilVisible:
      element: 'A+'
      direction: DOWN
- tapOn: 'A+'
- scrollUntilVisible:
      element: Speichern
      direction: DOWN
- repeat:
      times: 2
      commands:
          - tapOn: 'Speichern'
- assertVisible: 'Die Daten wurden gespeichert!'
- tapOn: Löschen
- tapOn: Ja
- assertVisible: 'Daten gelöscht'
- tapOn: OK
