appId: com.anonymous.ineedhelp
name: Delete personal data
---
- tapOn:
      id: 'userIcon'
- tapOn: Löschen
- tapOn: Ja
- assertVisible: 'Daten gelöscht'
- tapOn: OK
- tapOn: Speichern
