appId: com.anonymous.ineedhelp
name: Save personal data
---
- retry:
      maxRetries: 2
      commands:
          - tapOn: 'Name'
- inputText: 'Max Mustermann'
- tapOn:
      id: 'inputDateIcon'
      waitToSettleTimeoutMs: 3000
- tapOn:
      below: 'Speichern'
      waitToSettleTimeoutMs: 1000
- tapOn: 'DD.MM.YYYY'
- inputText: '01012000'
- tapOn: 'Speichern'
- tapOn: 'Gewicht in Kg'
- inputText: '65.5'
- scroll
- tapOn: 'Größe in cm'
- inputText: '175'
- tapOn: 'Bitte Blutgruppe wählen...'
- scrollUntilVisible:
      element: 'A+'
      direction: DOWN
- tapOn: 'A+'
- scrollUntilVisible:
      element: Speichern
      direction: DOWN
- doubleTapOn: 'Speichern'
- assertVisible: 'Die Daten wurden gespeichert!'
